B1.0 Java8 cacio支持: Java8版AWT(Caciotoolkit+bootclasspath/p)
- 新增 Java 8 版 caciocavallo(androidnw/shared 1.10) 资产
- javaMajor<9 时配 net.java.openjdk.cacio.ctc.CTCToolkit + headless=false
- 修复 B1.0 的 HeadlessException(需 java.awt 窗口)
- 注意: jre8 资产 libawt.so 缺 AWTFreeChar 符号(资产残缺/glibc版)，待换 bionic JRE8